Add outliers job